# now-playing-role-discord-bot

./: .env.example  Cargo.toml
src/: main.rs
